--- a/css/about.css
+++ b/css/about.css
@@ -140,7 +140,7 @@ section.about-offices {
 .swiper-office-city-tyumen .swiper-slide img {
     width: 100%;
     height: 100%;
-    object-fit: contain;
+    object-fit: cover;
     border-radius: 10px;
 }
 .about-office__city-tabs {
@@ -156,6 +156,10 @@ section.about-offices {
 
 .about-office__tabs {
     margin-top: 30px;
+}
+
+.swiper-about-promo .swiper-slide img {
+    width: 100%;
 }
 
 /* ABOUT END */
