--- a/css/media.css
+++ b/css/media.css
@@ -8,11 +8,7 @@
     }
 
     .header__search {
-        max-width: 320px;
-    }
-
-    .working-period {
-        gap: 10px;
+        max-width: 500px;
     }
 
     .header__categories-item {
@@ -142,7 +138,7 @@
 
 @media (max-width: 1320px) {
     .header__search {
-        max-width: 280px;
+        max-width: 450px;
     }
 
     .oval-btn--header {
@@ -231,7 +227,7 @@
     }
 
     .header__search {
-        max-width: 160px;
+        max-width: 280px;
     }
 
     .oval-btn--all-categories {
@@ -478,6 +474,9 @@
     .about-office__city {
         gap: 25px;
     }
+    .personal__progress-point.current .point-decimal {
+        font-size: 32px;
+    }
 }
 
 @media (max-width: 1024px) {
@@ -640,10 +639,9 @@
         transform: translateX(0);
     }
 
-
-
     .product-card__info-box {
         padding-bottom: 5px;
+        border-radius: 0;
     }
 
     .product-card__info-box .product-card__color-label {
@@ -1533,6 +1531,23 @@
     .product-box__tool button {
         color: var(--text-black-color);
     }
+    .compare__empty-product {
+        min-height: 523px;
+    }
+    .personal__form-buttons button {
+        padding: 15px;
+        font-size: 14px;
+    }
+    .personal__form-buttons {
+        gap: 10px;
+        justify-content: flex-start;
+    }
+    .personal__bonuses-entity-text ul {
+        color: #fff;
+    }
+    .rect-btn--bonuses-register {
+        margin-top: 35px;
+    }
 }
 
 @media (max-width: 820px) {
@@ -1841,7 +1856,11 @@
 
     .compare__buttons {
         margin-top: 15px;
-        justify-content: space-between;
+        justify-content: flex-start;
+    }
+    .compare__buttons button {
+        padding: 12px;
+        font-size: 14px;
     }
 
     .cart-item__row {
@@ -1959,6 +1978,37 @@
     }
     .faq__inner {
         margin-top: 35px;
+    }
+    .compare__empty-product {
+        min-height: 523px;
+    }
+    .personal__progress-value {
+        font-size: 20px;
+    }
+    .personal__progress-descr {
+        font-size: 12px;
+    }
+    .personal__progress-point.current .point-decimal {
+        font-size: 18px;
+        line-height: 1.5;
+    }
+    .personal__progress-point {
+        width: 12px;
+        height: 12px;
+    }
+    .personal__progress-point:nth-child(2) {
+        left: calc(10% - 18px);
+    }
+    
+    .personal__progress-point:nth-child(3) {
+        left: calc(50% - 30px);
+    }
+    
+    .personal__progress-point:nth-child(4) {
+        left: calc(100% - 42px);
+    } 
+    .personal__progress-line {
+        height: 4px;
     }
 }
 
@@ -2483,6 +2533,10 @@
     }
     label[data-input-required] textarea + span.require-icon {
         top: 65%;
+    }
+    .compare__empty-product {
+        padding: 15px;
+        min-height: 425px;
     }
 }
 
@@ -3076,8 +3130,34 @@
     .city-select__city.active a::after {
         left: -20px;
     }
-    label[data-input-required] span.require-icon {
-        left: 85%;
+    .rect-btn--compare-empty,
+    .rect-btn--compare-empty + p {
+        font-size: 12px;
+    }
+    .compare__empty-product {
+        min-height: 360px;
+    }
+    .personal__sale-text,
+    .personal__progress-point .point-decimal,
+    .personal__progress-sum {
+        font-size: 14px;
+    }
+    .personal__progress-hint {
+        width: 20px;
+        height: 20px;
+        font-size: 12px;
+    }
+    .personal__form-row-text {
+        font-size: 12px;
+    }
+    .personal__form-buttons button {
+        padding: 10px;
+    }
+    .personal__form-label input::placeholder {
+        font-size: 12px;
+    }
+    .personal__form input {
+        padding: 10px;
     }
 }
 
@@ -3390,7 +3470,13 @@
     label[data-input-required] span.require-icon {
         width: 20px;
         height: 20px;
-        left: 85%;
+    }
+    .rect-btn--compare-empty,
+    .rect-btn--compare-empty + p {
+        font-size: 10px;
+    }
+    .personal__progress-sum .sum {
+        display: block;
     }
 }
 
@@ -3407,7 +3493,7 @@
 
     /* HOVER START */
     a:hover {
-        color: var(--main-blue);
+        color: var(--hover-blue);
     }
 
     .oval-btn--brand-banner:hover {
@@ -3427,10 +3513,20 @@
         color: #fff;
     }
 
+    .rect-btn--contact-tab.active:hover,
+    .rect-btn--contact-info-tab.active:hover {
+        border-color: var(--hover-blue);
+    }
+
+    .tags__item:not(.current):hover {
+        border-color: var(--button-blue);
+        background-color: var(--button-blue);
+    }
+
     .transparent:hover,
     .rect-btn--contact-tab:hover,
     .rect-btn--contact-info-tab:hover {
-        background-color: var(--main-blue);
+        background-color: var(--button-blue);
         color: #fff;
     }
 
@@ -3485,7 +3581,7 @@
     }
 
     .header__top-link:hover {
-        color: var(--text-black-color);
+        color: var(--hover-blue);
     }
 
     .header__top-link--info:hover::before {
@@ -3501,7 +3597,7 @@
     }
 
     .header-city__button:hover {
-        color: var(--main-blue);
+        color: var(--hover-blue);
     }
 
     .header__categories-item.has-submenu .header__categories-link:hover~.header__categories-submenu {
@@ -3521,7 +3617,7 @@
     }
 
     .round-btn--header:hover {
-        background-color: var(--main-blue);
+        background-color: var(--button-blue);
         transition: var(--default-transition);
     }
 
@@ -3544,7 +3640,7 @@
 
     .complects__link:hover svg path,
     .actions__header-link:hover svg path {
-        fill: var(--main-blue);
+        fill: var(--hover-blue);
     }
 
     .product-card:hover {
@@ -3587,7 +3683,7 @@
     }
 
     .videos__banner-link:hover svg path {
-        fill: var(--main-blue);
+        fill: var(--hover-blue);
     }
 
     .videos__item-link:hover img,
@@ -3619,21 +3715,21 @@
         background-color: #0088cc;
     }
 
-    .close-btn svg:hover path {
-        fill: var(--main-black);
+    .close-btn:hover svg path {
+        fill: var(--hover-blue);
     }
 
     .product-box__tool:hover button {
-        color: var(--main-blue);
+        color: var(--hover-blue);
     }
 
     .product-box__tool--compare:hover svg path {
-        stroke: var(--main-blue);
+        stroke: var(--hover-blue);
     }
 
     .product-box__tool--share:hover svg path,
     .product-box__tool--pdf:hover svg path {
-        fill: var(--main-blue);
+        fill: var(--hover-blue);
     }
 
     .product-box__brand-link:hover img {
@@ -3647,11 +3743,6 @@
     .rect-btn--question:hover {
         background-color: var(--hover-blue);
         color: #fff;
-    }
-
-    .close-btn--city-select:hover svg path,
-    .close-btn--complaint:hover svg path {
-        fill: var(--main-blue);
     }
 
     .cart-item__delete-btn:hover svg path {
@@ -3674,7 +3765,8 @@
         border-radius: 10px 10px 0 0;
     }
 
-    .products__main .product-card:hover .product-card__info-box {
+    .products__main .product-card:hover .product-card__info-box,
+    .compare__products-inner .product-card:hover .product-card__info-box {
         border-radius: 0;
     }
 
