--- a/css/style.css
+++ b/css/style.css
@@ -223,7 +223,7 @@ body.active {
 
 .header__search {
     position: relative;
-    max-width: 550px;
+    max-width: 380px;
     width: 100%;
     height: 48px;
 }
@@ -399,6 +399,7 @@ body.active {
     display: flex;
     flex-direction: column;
     gap: 0;
+    margin-left: 30px;
     font-size: 12px;
 }
 
@@ -415,6 +416,7 @@ body.active {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-left: 22px;
 }
 
 .header__bottom {
