--- a/css/style.css
+++ b/css/style.css
@@ -1350,6 +1350,8 @@ body.active {
     transition: var(--default-transition);
     max-width: 100%;
     max-height: 100%;
+    object-fit: contain;
+    object-position: center;
 }
 
 .popular-card--big .popular__img img {
@@ -3023,7 +3025,7 @@ a.footer__nav-link--show {
     z-index: 1;
     left: 0;
     top: 0;
-    transition: var(--alt-transition);
+    transition: transform 0.2s;
 }
 
 .product-box__colors-color {
@@ -3033,6 +3035,31 @@ a.footer__nav-link--show {
     height: 25px;
     background-color: #ccc;
     cursor: pointer;
+}
+
+.product-box__colors-color::before {
+    content: '';
+    display: block;
+    width: 100%;
+    height: 100%;
+    border: 4px solid var(--main-blue);
+}
+
+.product-box__colors-color:not(input:checked)::before {
+    opacity: 0;
+}
+
+.product-box__colors-color:has(input:checked)::before {
+    animation: productColorBorder 0s linear 0.2s forwards;
+}
+
+@keyframes productColorBorder {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
 }
 
 .product-box__colors-item input {
