--- a/css/media.css
+++ b/css/media.css
@@ -1642,6 +1642,9 @@
         color: var(--main-blue);
         background-color: #fff;
     }
+    .products__header-right {
+        width: auto;
+    }
 }
 
 @media (max-width: 820px) {
