--- a/css/style.css
+++ b/css/style.css
@@ -1743,7 +1743,7 @@ body.active {
 .label {
     display: inline-block;
     color: #fff;
-    padding: 5px;
+    padding: 2px 5px;
     font-size: 12px;
     line-height: 18px;
     border-radius: 5px;
@@ -1765,7 +1765,7 @@ body.active {
     font-size: 12px;
     font-weight: 500;
     background-color: var(--red-color);
-    padding: 5px 15px;
+    padding: 2px 10px;
     border-radius: 5px;
 }
 
@@ -1834,20 +1834,19 @@ body.active {
 }
 
 .product-info__delivery {
-    color: var(--no-order-color);
+    color: #9a9fa8;
     font-size: 11px;
     line-height: 16.5px;
 }
 
 .product-card__name:not(a) {
     margin-top: 10px;
-    font-size: 20px;
+    font-size: 14px;
 }
 
 .product-card__name a {
     overflow: hidden;
     display: block;
-    font-weight: 600;
     line-height: normal;
     max-height: 2.5em;
     height: 2.5em;
@@ -1861,8 +1860,9 @@ body.active {
 }
 
 .product-card__prices {
-    margin-top: 0;
+    margin-top: -30px;
     grid-area: C;
+    width: 80%;
 }
 
 .product-card__price {
@@ -1976,6 +1976,7 @@ body.active {
     height: 25px;
     display: block;
     cursor: pointer;
+    border-radius: 50%;
 }
 
 .product-card__color-label.checked {
@@ -3035,6 +3036,7 @@ a.footer__nav-link--show {
     height: 25px;
     background: transparent;
     border: 4px solid var(--main-blue);
+    border-radius: 50%;
     z-index: 1;
     left: 0;
     top: 0;
@@ -3047,6 +3049,7 @@ a.footer__nav-link--show {
     width: 25px;
     height: 25px;
     background-color: #ccc;
+    border-radius: 50%;
     cursor: pointer;
 }
 
@@ -3056,6 +3059,7 @@ a.footer__nav-link--show {
     width: 100%;
     height: 100%;
     border: 4px solid var(--main-blue);
+    border-radius: 50%;
 }
 
 .product-box__colors-color:not(input:checked)::before {
@@ -3796,5 +3800,5 @@ label[data-input-required] textarea + span.require-icon {
 }
 
 .swap-display-button svg path {
-    fill: var(--main-blue);
+    fill: #9a9fa8;
 }
