--- a/css/media.css
+++ b/css/media.css
@@ -12,7 +12,7 @@
     }
 
     .header__categories-item {
-        margin-right: 15px;
+        /* margin-right: 15px; */
     }
 
     .swiper-button-next {
@@ -134,12 +134,25 @@
         max-width: 450px;
     }
 
-    .products__main.favorite.tiles {
-        /* grid-template-columns: repeat(4, 270px); */
+    .header__categories-link {
+        font-size: 13px;
     }
 }
 
 @media (max-width: 1320px) {
+    /* .round-btn--header {
+        width: 38px;
+        height: 38px;
+    }
+    .round-btn--header img {
+        max-width: 10px;
+    } */
+    .header__categories-link {
+        font-size: inherit;
+    }
+    .header-panel {
+        gap: 5px;
+    }
     .header__search {
         max-width: 200px;
     }
@@ -153,7 +166,7 @@
     }
 
     .header__categories-item {
-        margin-right: 10px;
+        /* margin-right: 10px; */
     }
 
     .header {
@@ -220,7 +233,28 @@
     }
 }
 
+@media (max-width: 1250px) {
+    .round-btn--header {
+        width: 42px;
+        height: 42px;
+    }
+    .header__bottom-nav {
+        gap: 10px;
+    }
+}
+
 @media (max-width: 1200px) {
+    .oval-btn.oval-btn--all-categories {
+        font-size: 0;
+        gap: 0;
+        border-radius: 10px;
+        padding: 16px 10px;
+    }
+    .header.scroll .header__middle .oval-btn--all-categories {
+        font-size: inherit;
+        gap: 10px;
+        padding: 12px;
+    }
     .phone-number {
         font-size: 12px;
     }
@@ -237,7 +271,7 @@
     }
 
     .oval-btn--all-categories {
-        width: 140px;
+        /* width: 140px; */
     }
 
     .oval-btn--all-categories .close {
@@ -266,7 +300,7 @@
     }
 
     .header__categories-item {
-        margin-right: 5px;
+        /* margin-right: 5px; */
     }
 
     .header__bottom-nav {
@@ -2716,6 +2750,13 @@
         padding: 15px;
         min-height: 425px;
     }
+
+    .banner__inner .banner-pagination {
+        position: static;
+        height: auto;
+        padding: 15px 18px;
+        justify-content: flex-start;
+    }
 }
 
 @media (max-width: 500px) {
@@ -3427,7 +3468,7 @@
 
 @media (max-width: 400px) {
     .banner {
-        padding: 0 0 50px;
+        padding: 0;
     }
 
     section {
