--- a/css/style.css
+++ b/css/style.css
@@ -427,6 +427,7 @@ body.active {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    gap: 10px;
 }
 
 .header.scroll .header__bottom {
@@ -439,7 +440,7 @@ body.active {
 .header__bottom-nav {
     display: flex;
     align-items: center;
-    gap: 40px;
+    gap: 20px;
 }
 
 .catalog-popup {
@@ -583,13 +584,14 @@ body.active {
 .oval-btn--all-categories {
     position: relative;
     height: 48px;
-    width: 183px;
-    padding-left: 56px;
+    /* width: 183px; */
     display: flex;
     align-items: center;
-    justify-content: center;
-    padding: 0;
-    padding-left: 30px;
+    justify-content: space-between;
+    gap: 10px;
+    /* padding: 0 30px; */
+    /* padding-left: 30px; */
+    flex-shrink: 0;
 }
 
 .header .header__middle .oval-btn--all-categories {
@@ -597,15 +599,16 @@ body.active {
 }
 
 .header.scroll .header__middle .oval-btn--all-categories {
-    display: block;
+    display: flex;
     margin-left: 30px;
 }
 
 .close {
-    position: absolute;
+    /* position: absolute; */
     top: 50%;
-    transform: translateY(-50%);
+    /* transform: translateY(-50%); */
     left: 25px;
+    order: -1;
 }
 
 .close span {
@@ -636,25 +639,29 @@ body.active {
 
 .header__categories-list {
     display: flex;
+    gap: 10px;
 }
 
 .header__categories-item {
     position: relative;
-    margin-right: 30px;
+    /* margin-right: 30px; */
 }
 
 .header__categories-link {
     color: var(--text-grey-color);
     position: relative;
-    padding: 15px 0;
+    display: flex;
+    align-items: center;
+    white-space: nowrap;
+    /* font-size: 13px; */
 }
 
 .header__categories-link span {
     border: solid var(--text-grey-color);
     border-width: 0 1px 1px 0;
     display: inline-block;
-    padding: 3px;
-    transform: translateY(-50%) rotate(45deg);
+    padding: 2px;
+    transform: translateY(-2px) rotate(45deg);
     margin-left: 5px;
     transition: var(--default-transition);
 }
@@ -1964,7 +1971,7 @@ body.active {
     display: flex;
     flex-wrap: wrap;
     gap: 15px;
-    padding: 0 40px;
+    padding: 0 10px;
 }
 
 .product-card__color-item {
