Дополнение к предыдущему коммиту, тестировал без иконки Избранное, сейчас добавил обратно, скорректировал стили

--- a/css/media.css
+++ b/css/media.css
@@ -244,6 +244,9 @@
 }
 
 @media (max-width: 1200px) {
+    .header__categories-list {
+        gap: 5px;
+    }
     .oval-btn.oval-btn--all-categories {
         font-size: 0;
         gap: 0;
